# OpenEnterprise-Twin

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  security.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py  0002_decision_ledger.py  0003_decision_loop.py
backend/src/openenterprise_twin/: __init__.py
backend/src/openenterprise_twin/analytics/: __init__.py  _digest.py  adaptive.py  backtesting.py  calibration.py  credibility.py  history.py  ingestion.py  monitoring.py  optimization.py  quality.py  synthetic.py
backend/src/openenterprise_twin/api/: __init__.py  app.py  decision_loop_routes.py  dependencies.py  errors.py  middleware.py  routes.py  schemas.py
backend/src/openenterprise_twin/application/: __init__.py  decision_loop.py  decisions.py  experiments.py  ledger.py  portfolio.py  ports.py
backend/src/openenterprise_twin/cli/: __init__.py  demo.py
backend/src/openenterprise_twin/domain/: __init__.py  company.py  errors.py  ledger.py  results.py  scenario.py
backend/src/openenterprise_twin/infrastructure/: __init__.py  artifacts.py  database.py  models.py  repositories.py  runner.py  settings.py
backend/src/openenterprise_twin/plugins/: __init__.py  manifest.py  protocols.py  registry.py
backend/src/openenterprise_twin/reporting/: __init__.py  brief.py  narrative.py
backend/src/openenterprise_twin/scenarios/: __init__.py  comparison.py
backend/src/openenterprise_twin/simulation/: __init__.py  demand.py  engine.py  experiment.py  finance.py  invariants.py  metrics.py  operations.py  reference.py  shocks.py
backend/tests/: __init__.py  factories.py
backend/tests/integration/: __init__.py  test_api.py  test_decision_loop_api.py  test_postgres_api.py
backend/tests/performance/: test_experiment_benchmark.py
backend/tests/unit/analytics/: test_adaptive.py  test_backtesting.py  test_calibration.py  test_credibility.py  test_history.py  test_ingestion.py  test_monitoring.py  test_optimization.py  test_quality.py
backend/tests/unit/application/: test_ledger_service.py  test_portfolio.py
backend/tests/unit/cli/: test_demo.py
backend/tests/unit/domain/: test_company.py  test_ledger.py  test_scenario.py
backend/tests/unit/infrastructure/: test_artifacts.py  test_models.py
backend/tests/unit/plugins/: test_manifest.py  test_registry.py
backend/tests/unit/reporting/: test_brief.py
backend/tests/unit/scenarios/: test_comparison.py
backend/tests/unit/simulation/: test_demand.py  test_engine.py  test_experiment.py  test_finance.py  test_invariants.py  test_metrics.py  test_operations.py  test_shocks.py
docs/: OpenEnterprise-Twin-threat-model.md  architecture.md  contributing.md  design-system.md  model.md
docs/superpowers/plans/: 2026-07-16-openenterprise-twin-v0.1.md  2026-07-18-github-publication.md
docs/superpowers/specs/: 2026-07-16-openenterprise-twin-design.md  2026-07-18-github-publication-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: report.spec.ts  scenario.spec.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  AppShell.tsx  routes.tsx
frontend/src/components/: BrandMark.tsx  Status.tsx
frontend/src/lib/: api.ts  (+1 more)
frontend/tests/: App.test.tsx  AppShell.test.tsx  Autopilot.test.tsx  ControlTower.test.tsx  ExecutiveReportPage.test.tsx  ScenarioBuilder.test.tsx  ScenarioComparePage.test.tsx  Status.test.tsx  api.test.ts  format.test.ts  setup.ts  useScenarioExperiment.test.tsx
(+33 files in other folders)
