[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openenterprise-twin"
version = "0.1.0"
description = "Reproducible enterprise simulation for decision intelligence."
readme = {text = "OpenEnterprise Twin domain package.", content-type = "text/markdown"}
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "OpenEnterprise Twin contributors"}]
dependencies = [
    "numpy>=2.2,<3",
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openenterprise_twin"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["openenterprise_twin"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unreachable = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
