[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "openenterprise-twin"
version = "0.2.0"
description = "Reproducible enterprise simulation for decision intelligence."
readme = {text = "OpenEnterprise Twin domain package.", content-type = "text/markdown"}
requires-python = ">=3.12,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "OpenEnterprise Twin contributors"}]
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "numpy>=2.2,<3",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "psycopg[binary,pool]>=3.2,<4",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.7,<3",
    "import-linter>=2.3,<3",
    "mypy>=1.15,<2",
    "pytest>=9.0.3,<10",
    "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openenterprise_twin"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "performance: long-running functional performance validation",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["openenterprise_twin"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unreachable = true
show_error_codes = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.importlinter]
root_packages = ["openenterprise_twin"]

[[tool.importlinter.contracts]]
name = "Core analytics remains independent from delivery infrastructure"
type = "forbidden"
source_modules = [
    "openenterprise_twin.domain",
    "openenterprise_twin.simulation",
]
forbidden_modules = [
    "openenterprise_twin.api",
    "openenterprise_twin.infrastructure",
    "openenterprise_twin.persistence",
]

[[tool.importlinter.contracts]]
name = "Plugin SDK remains independent from delivery infrastructure"
type = "forbidden"
source_modules = ["openenterprise_twin.plugins"]
forbidden_modules = [
    "openenterprise_twin.api",
    "openenterprise_twin.infrastructure",
    "openenterprise_twin.persistence",
]

[[tool.importlinter.contracts]]
name = "Application services depend on ports, not infrastructure"
type = "forbidden"
source_modules = ["openenterprise_twin.application"]
forbidden_modules = [
    "openenterprise_twin.api",
    "openenterprise_twin.infrastructure",
]
